--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "devDependencies": {
     "@biomejs/biome": "^2.3.11",
     "@tscircuit/hypergraph": "^0.0.11",
+    "@tscircuit/math-utils": "^0.0.32",
     "@tscircuit/solver-utils": "^0.0.13",
     "@types/bun": "latest",
     "bun-match-svg": "^0.0.15",
+    "graphics-debug": "^0.0.76",
     "react-cosmos": "^7.1.0",
     "react-cosmos-plugin-vite": "^7.1.0",
     "vite": "^7.3.1"
