--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "curvy-trace-solver",
-  "module": "index.ts",
+  "main": "dist/index.js",
   "type": "module",
-  "private": true,
+  "scripts": {
+    "start": "cosmos"
+  },
   "devDependencies": {
     "@biomejs/biome": "^2.3.11",
     "@tscircuit/hypergraph": "^0.0.11",
