init curvy trace solver

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@tscircuit/curvy-trace-solver",
   "main": "dist/index.js",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "start": "cosmos",
